app/assets/stylesheets/item.css.scss
/* ... */
.footer {
  display: none;
}

h1, h2{
  padding: 0 3%;
}

.iosSlider {
  // required
  position: relative;
  top: 0;
  left: 0;
  overflow: hidden;
  width: 100%;
  height: 500px;

  .slider {
    // required
    width: 100%;
    height: 100%;

    .slide {
      // required
      float: left;
      width: 100%;
      height: 500px;
      background-position: center center;
      background-size: cover;
    }
  }
}

.slide-selectors {
  position: relative;
  bottom: -20px;
  width: 50%;
  margin: 0 auto;
  z-index: 1;
  height: 10px;
  text-align: center;

  .item {
    display: inline-block;
    width: 9px;
    height: 9px;
    background: #505050;
    margin: 0 0 0 10px;
    @include opacity(0.25);
    @include border-radius(100px);

    &.selected {
      background: #505050;
      @include opacity(1);
    }
  }
}

.scrollbar {
  position: relative;
  bottom: 4px;
  left: 0;
  width: 100%;
  height: 4px;
  margin: 0 auto;
  z-index: 1;
}

.scrollleft, .scrollright {
  color: $gold_color;
  font-size: 2em;
  position: absolute;
  z-index: 100;
  top: 250px;
  left: -55px;
  cursor: pointer;
  -webkit-touch-callout: none;
  -webkit-user-select: none;
  -khtml-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.scrollright {
  left: 620px;
}


.mobile-navigation {
  display: none;
  position: fixed;
  z-index: 10000;
  right: 10007px;
  height: 101%;
  width: 100%;

  table {
    height: 100%;
    width: 100%;
    border-spacing: 0;
  }

  tr {
    padding-top: 10%;
    height: 10%;
  }

  td {
    position: relative;
    right: 0;
    height: 10%;
    width: 100%;
    margin: 0;
    padding: 0 20px;
    overflow: hidden;
    white-space: nowrap;
    font-size: 4em;
    background: $gold_color;

    @include transition-property(right);
    @include transition-duration(0.5s);

    &.active {
      right: -10007px;
    }

    &.home {
      background: $gold-color;
    }

    &.clothing {
      background: lighten( $gold-color, 5% );
    }

    &.accessories {
      background: lighten( $gold-color, 10% );
    }

    &.shoes {
      background: lighten( $gold-color, 15% );
    }

    &.outdoor {
      background: lighten( $gold-color, 20% );
    }

    &.housewares {
      background: lighten( $gold-color, 25% );
    }

    &.art {
      background: lighten( $gold-color, 30% );
    }

    a {
      font-style: normal;
      text-transform: uppercase;
      font-size: .7em;
      color: #fff;
      text-decoration: none;
      margin-left: 5%;
      // @include text-shadow( 0px 2px 2px rgba(0,0,0,0.3));
      display: block;
    }
  }
}

/* #Media Queries
================================================== */

  /* Smaller than standard 960 (devices and browsers) */
  @media only screen and (max-width: 1403px) {
    .item-grid {
      @include clearfix;
      // padding: 7px 20px;
      margin-left: auto;
      margin-right: auto;
      width: 680px;
      .item {
        width: 320px;
        height: 320px;
        background-size: cover;
        background-position: 50% 50%;
        float: left;
        margin: 10px;
        }
      }
    .footer {
      display: none;
    }
  }

  /* Tablet Portrait size to standard 960 (devices and browsers) */
  @media only screen and (min-width: 960px) and (max-width: 1040px) {
  .footer {
    display: none;
    }
  .item-grid {
    @include clearfix;
    margin-left: auto;
    margin-right: auto;
    width: 680px;
    .item {
      width: 300px;
      height: 300px;
      background-size: cover;
      background-position: 50% 50%;
      float: left;
      margin: 10px;
      }
    }

    .sidebar {
      width: 290px;
    }
    .content {
      margin-left: 290px;
    }
    .logo {
      width: 285px;
    }
    .sidebar-top{
      margin-left: -39px;
    }

    h1, h2{
      font-size: 40px;
      padding: 0 3%;
    }

    .scrollleft, .scrollright {
      display: none;
    }

    .top-bar .top-bar-content {
      margin-left: 290px;
      color: #C59D5E;
      text-align: center;
      font-size: 12px;
      font-weight: lighter;
      line-height: 44px;
      text-transform: uppercase;
      letter-spacing: 4px;
    }
  }

  /* All Mobile Sizes (devices and browser) */
  @media only screen and (min-width: 775px) and (max-width: 960px) {
  
  .mobile-navigation {
    display: block;
  }

  .footer {
    display: none;
    }
  .item-grid {
    @include clearfix;
    // padding: 7px 20px;
    margin-left: auto;
    margin-right: auto;
    width: 340px;
    .item {
      width: 320px;
      height: 320px;
      background-size: cover;
      background-position: 50% 50%;
      float: left;
      margin: 10px;
      }
    }

    .sidebar {
      width: 290px;
    }
    .content {
      margin-left: 290px;
    }
    .logo {
      width: 285px;
    }
    .sidebar-top{
      margin-left: -39px;
    }

    h1, h2{
      font-size: 40px;
      padding: 0 3%;
    }

    .top-bar .top-bar-content {
      margin-left: 290px;
      color: #C59D5E;
      text-align: center;
      font-size: 12px;
      font-weight: lighter;
      line-height: 44px;
      text-transform: uppercase;
      letter-spacing: 4px;
    }
    .scrollleft, .scrollright {
      display: none;
    }
  }
/* ... */

